@@ -1,3 +1,8 @@
+2009-02-12 Denton Woods <doomwiz@users.sf.net>
+	* il_ftx.c: Added this file.
+	* lib/Makefile.am and src-IL/src/Makefile.am: Added il_ftx.c to source line.
+	* il_io.c: Added Ftx loading function calls.
+
 2009-02-11 Denton Woods <doomwiz@users.sf.net>
 	* il_jpeg.c (ilSaveJpegL): Changed the itellw call to after iSetOutputLump
 	  (was returning bad values, since the lump was not set yet).
@@ -5,6 +10,7 @@
 	* il_bmp.c, il_dds-save.c, il_hdr.c, il_jp2.c, il_pcx.c, il_png.c, il_pnm.c, il_psd.c, il_raw.c,
 	  il_sgi.c, il_wbmp.c: Fixed same problem that il_jpeg.c had with saving lumps.
 	* il_sgi.c: Put header on file.
+	* il_iwi.c:337: Removed this line, which called iread a second time for CompData.
 
 2009-02-10 Denton Woods <doomwiz@users.sf.net>
 	* il_io.c: Added ilLoadBlp calls in il_io.c.
